--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     const input = document.getElementById('userInput');
     const button = document.getElementById('sendBtn');
 
-    const API_KEY = 'INSÈRE_TA_CLÉ_OPENAI_ICI';
+    const API_KEY = 'sk-...pQkA';
     const API_URL = 'https://api.openai.com/v1/chat/completions';
 
     async function sendMessage(message) {
