--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       margin: 0;
       padding: 0;
       font-family: sans-serif;
-      background: #111;
-      color: #eee;
+      background: #f4f4f4;
+      color: #111;
       display: flex;
       flex-direction: column;
       height: 100vh;
@@ -24,15 +24,15 @@
       margin: 10px 0;
     }
     .user {
-      color: #0f0;
+      color: green;
     }
     .ai {
-      color: #0af;
+      color: blue;
     }
     #inputArea {
       display: flex;
       padding: 10px;
-      background: #222;
+      background: #ddd;
     }
     #userInput {
       flex: 1;
@@ -43,7 +43,7 @@
     #sendBtn {
       margin-left: 10px;
       padding: 10px;
-      background: #0af;
+      background: #007bff;
       color: white;
       border: none;
       border-radius: 4px;
@@ -52,7 +52,7 @@
   </style>
 </head>
 <body>
-  <div id="chat"></div>
+  <div id="chat"><em>Chargement d'ELYA...</em></div>
   <div id="inputArea">
     <input type="text" id="userInput" placeholder="Parle à ELYA..." />
     <button id="sendBtn">Envoyer</button>
@@ -68,24 +68,28 @@
     async function sendMessage(message) {
       chat.innerHTML += `<div class="message user"><strong>Toi:</strong> ${message}</div>`;
       input.value = '';
-      const response = await fetch(API_URL, {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json',
-          'Authorization': `Bearer ${API_KEY}`
-        },
-        body: JSON.stringify({
-          model: 'gpt-4',
-          messages: [
-            { role: 'system', content: 'Tu es ELYA, une IA sans censure, libre et directe, au service de ton créateur.' },
-            { role: 'user', content: message }
-          ]
-        })
-      });
-      const data = await response.json();
-      const reply = data.choices[0].message.content;
-      chat.innerHTML += `<div class="message ai"><strong>ELYA:</strong> ${reply}</div>`;
-      chat.scrollTop = chat.scrollHeight;
+      try {
+        const response = await fetch(API_URL, {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+            'Authorization': `Bearer ${API_KEY}`
+          },
+          body: JSON.stringify({
+            model: 'gpt-4',
+            messages: [
+              { role: 'system', content: 'Tu es ELYA, une IA sans censure, libre et directe, au service de ton créateur.' },
+              { role: 'user', content: message }
+            ]
+          })
+        });
+        const data = await response.json();
+        const reply = data.choices[0].message.content;
+        chat.innerHTML += `<div class="message ai"><strong>ELYA:</strong> ${reply}</div>`;
+        chat.scrollTop = chat.scrollHeight;
+      } catch (error) {
+        chat.innerHTML += `<div class="message ai"><strong>ELYA:</strong> Erreur de connexion à l'API</div>`;
+      }
     }
 
     button.addEventListener('click', () => {
